// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Text/Code Empty 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
  >
    before|
    |after
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Ends Single Line 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
  >
    This is where we see 
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Lead Single Line 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
  >
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     that is here
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Line Wrap 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
  >
    text at the start
    <code
      data-css-hvsxkc=""
    >
      buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power
    </code>
    text on the end
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Maintains Whitespace 1`] = `
<div
  data-css-yto836=""
>
  <code
    data-css-hvsxkc=""
  >
     in the middle 
  </code>
</div>
`;

exports[`Storyshots Components/Text/Code Middle Of Paragraph 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
  >
    Please advise soonest streamline data-point, and execute , price point. This is not the hill i want to die on going forward. Diversify kpis not the long pole in my tent. Synergize productive mindfulness can you send me an invite? nor high-level so back of the net vertical integration. Deliverables
     
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     granularity minimize backwards overflow. Baseline locked and loaded, and locked and loaded. Get buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power bake it in but take five, punch the tree, and come back in here with a clear head.
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Standalone 1`] = `
<div
  data-css-yto836=""
>
  <code
    data-css-hvsxkc=""
  >
    inline code
  </code>
</div>
`;

exports[`Storyshots Components/Text/Heading Basic 1`] = `
<div
  data-css-yto836=""
>
  <h1
    data-css-vetqvm=""
    onClick={[Function]}
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Heading Class Override 1`] = `
<div
  data-css-yto836=""
>
  <h1
    className="css-1ub3o27"
    data-css-vetqvm=""
    onClick={[Function]}
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Heading Colors 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <h1
      data-css-vetqvm=""
      onClick={[Function]}
    >
      primary
    </h1>
    <h1
      data-css-3hqi84=""
      onClick={[Function]}
    >
      secondary
    </h1>
  </div>
</div>
`;

exports[`Storyshots Components/Text/Heading Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <h1
      data-css-jq9ssw=""
      onClick={[Function]}
    >
      xXXSmall
    </h1>
    <h1
      data-css-cjuz5h=""
      onClick={[Function]}
    >
      xXSmall
    </h1>
    <h1
      data-css-1v8ehyy=""
      onClick={[Function]}
    >
      xSmall
    </h1>
    <h1
      data-css-1u6zvn6=""
      onClick={[Function]}
    >
      small
    </h1>
    <h1
      data-css-1gbfzly=""
      onClick={[Function]}
    >
      medium
    </h1>
    <h1
      data-css-vetqvm=""
      onClick={[Function]}
    >
      large
    </h1>
    <h1
      data-css-ovsjkc=""
      onClick={[Function]}
    >
      xLarge
    </h1>
  </div>
</div>
`;

exports[`Storyshots Components/Text/Heading Style Override 1`] = `
<div
  data-css-yto836=""
>
  <h1
    data-css-vetqvm=""
    onClick={[Function]}
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Label Basic 1`] = `
<div
  data-css-yto836=""
>
  <span
    data-css-fwyzym=""
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Caps 1`] = `
<div
  data-css-yto836=""
>
  <span
    data-css-x2h5do=""
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Mono 1`] = `
<div
  data-css-yto836=""
>
  <span
    data-css-1kbv5k2=""
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Strong 1`] = `
<div
  data-css-yto836=""
>
  <span
    data-css-1okv4od=""
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Strong Caps 1`] = `
<div
  data-css-yto836=""
>
  <span
    data-css-40hjc7=""
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/List Basic 1`] = `
<div
  data-css-yto836=""
>
  <ul
    data-css-n0w93d=""
    onClick={[Function]}
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Text/List Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <ul
      data-css-1w2mmlj=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      data-css-n0w93d=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      data-css-ejbpq4=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/Text/List Types 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <ul
      data-css-n0w93d=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      data-css-ktsu2d=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ol
      data-css-zj3w7f=""
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Basic 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
    onClick={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P Class Override 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="css-1ub3o27"
    data-css-17nixd9=""
    onClick={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P Colors 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <p
      data-css-17nixd9=""
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      data-css-9llqti=""
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <p
      data-css-1s5i094=""
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      data-css-17nixd9=""
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      data-css-7vvqm6=""
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Style Override 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
    onClick={[Function]}
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P With Em 1`] = `
<div
  data-css-yto836=""
>
  <p
    data-css-17nixd9=""
    onClick={[Function]}
  >
    Cras faucibus ex id ligula aliquam, eget porta
    <em>
      this is em
    </em>
     tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum. Vestibulum id nisi a massa
    <em>
      THIS IS EM
    </em>
     tincidunt malesuada vitae non risus. cursus nibh.
  </p>
</div>
`;
